tests/expectations/compiler/constructor/config_but_no_constructor_fail.out
DCE_ENABLED:
Error [ESAZ0374011]: An upgrade configuration was provided, but no constructor was found.
    --> compiler-test:5:1
     |
   5 | program test.aleo {
     | ^^^^^^^^^^^^^^^^^^^
   6 |     transition foo() {}
     |     ^^^^^^^^^^^^^^^^^^^
   7 | }
     | ^

DCE_DISABLED:
Error [ESAZ0374011]: An upgrade configuration was provided, but no constructor was found.
    --> compiler-test:5:1
     |
   5 | program test.aleo {
     | ^^^^^^^^^^^^^^^^^^^
   6 |     transition foo() {}
     |     ^^^^^^^^^^^^^^^^^^^
   7 | }
     | ^
